validator_derive_tests/tests/compile-fail/unexpected_validator.rs
use validator::Validate;

#[derive(Validate)]
struct NotAValidator {
    #[validate(my_custom_validator)]
    field: String,
}

fn main() {}
