validator_derive_tests/tests/compile-fail/unexpected_validator.stderr
error: Unknown field: `my_custom_validator`
 --> tests/compile-fail/unexpected_validator.rs:5:16
  |
5 |     #[validate(my_custom_validator)]
  |                ^^^^^^^^^^^^^^^^^^^
